adjusted css to hopefully fix table going off screen

--- a/School-Shootings.css
+++ b/School-Shootings.css
@@ -1,3 +1,8 @@
+.scrollable-table {
+  overflow-x: auto !important;
+  width: 100% !important;
+}
+
 .u-section-1 .u-sheet-1 {
   min-height: 1001px;
 }
